core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__scalar_functions-3.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT LOG(u64_field, 8) FROM all_types\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), log:Float64;N]
  Projection: Dictionary(Int32, Utf8("all_types")) AS iox::measurement, all_types.time AS time, log(Float64(8), all_types.u64_field) AS log [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), log:Float64;N]
    Filter: all_types.u64_field IS NOT NULL [bool_field:Boolean;N, f64_field:Float64;N, i64_field:Int64;N, str_field:Utf8;N, tag0:Dictionary(Int32, Utf8);N, tag1:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), u64_field:UInt64;N]
      TableScan: all_types [bool_field:Boolean;N, f64_field:Float64;N, i64_field:Int64;N, str_field:Utf8;N, tag0:Dictionary(Int32, Utf8);N, tag1:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), u64_field:UInt64;N]
