core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__scalar_functions-4.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT LOG(usage_idle) FROM cpu\")"
---
rewriting statement
caused by
gather information about select statement
caused by
Error during planning: invalid number of arguments for log, expected 2, got 1
